Marco: refactoring, finished swagger and added readme file
